# rust_boardgame_player

./: Cargo.toml  README.md
old/: monto_carlo_simple.rs  plgnn_trunc.rs
old/brain/: lg_trunc.rs
src/: lib.rs
src/player/: human.rs  mod.rs  monte_carlo.rs-tobe  plgnn_diamond.rs  plgnn_diamond_tree_search.rs  plgnn_trunc.rs  random.rs
src/player/brain/: lg_diamond.rs  mod.rs
